force-app/main/default/objects/INCO_Charge__c/INCO_Charge__c.object-meta.xml
<CustomObject>
    <label>Origin Charge</label>
    <nameField>
        <displayFormat>Origin-Charge-{0000}</displayFormat>
        <label>Origin Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Origin Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>