force-app/main/default/objects/INCO_Charge__c/fields/Bayan__c.field-meta.xml
<CustomField>
    <fullName>Bayan__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bayan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>