force-app/main/default/objects/INCO_Charge__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <formula>TEXT( Loading_Charge_Name__r.Direction__c )</formula>
    <label>Direction</label>
    <type>Text</type>
</CustomField>