force-app/main/default/objects/INCO_Charge__c/fields/Export_Service_Fees__c.field-meta.xml
<CustomField>
    <fullName>Export_Service_Fees__c</fullName>
    <label>Export Service Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>