force-app/main/default/objects/INCO_Charge__c/fields/Fasah_fee__c.field-meta.xml
<CustomField>
    <fullName>Fasah_fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fasah Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>