force-app/main/default/objects/INCO_Charge__c/fields/INCO_Term__c.field-meta.xml
<CustomField>
    <fullName>INCO_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INCO Term</label>
    <referenceTo>INCO_Term__c</referenceTo>
    <relationshipName>INCO_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>