force-app/main/default/objects/INCO_Charge__c/fields/Insurance_Charges__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Charges__c</fullName>
    <label>Insurance Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>