force-app/main/default/objects/INCO_Charge__c/fields/Loading_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Loading_Charge_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportation Charge Name</label>
    <referenceTo>Loading_Charge__c</referenceTo>
    <relationshipLabel>Origin Charges</relationshipLabel>
    <relationshipName>INCO_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>