force-app/main/default/objects/INCO_Charge__c/fields/Origin_Customs_clearance__c.field-meta.xml
<CustomField>
    <fullName>Origin_Customs_clearance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Customs clearance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>