force-app/main/default/objects/INCO_Charge__c/fields/Origin_Loading_Charges__c.field-meta.xml
<CustomField>
    <fullName>Origin_Loading_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Origin Loading Charges (Dock Stuffing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>