force-app/main/default/objects/INCO_Charge__c/fields/OTHC__c.field-meta.xml
<CustomField>
    <fullName>OTHC__c</fullName>
    <inlineHelpText>Use same currency</inlineHelpText>
    <label>OTHC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>