force-app/main/default/objects/INCO_Charge__c/fields/Port_Shuttling__c.field-meta.xml
<CustomField>
    <fullName>Port_Shuttling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Port Shuttling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>