force-app/main/default/objects/INCO_Charge__c/fields/Reefer_Plugin_Charges__c.field-meta.xml
<CustomField>
    <fullName>Reefer_Plugin_Charges__c</fullName>
    <label>Reefer Plugin Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>