force-app/main/default/objects/INCO_Charge__c/fields/RMS__c.field-meta.xml
<CustomField>
    <fullName>RMS__c</fullName>
    <label>RMS</label>
    <referenceTo>RMS__c</referenceTo>
    <relationshipName>INCO_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>