force-app/main/default/objects/INCO_Charge__c/fields/Tarpaulin_Charges__c.field-meta.xml
<CustomField>
    <fullName>Tarpaulin_Charges__c</fullName>
    <label>Tarpaulin Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>