force-app/main/default/objects/INCO_Charge__c/fields/Truck_idling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Truck_idling_Charges__c</fullName>
    <label>Truck idling Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>