force-app/main/default/objects/INCO_Charge__c/fields/Xray__c.field-meta.xml
<CustomField>
    <fullName>Xray__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Xray</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>